@@ -1,3 +1,9 @@
+2005-11-21  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* MsPrjHelper.cs: Factorized code from getting the location of a package
+	in a method. Take into account that the package may not be installed.
+	* pkgconfiginvoker.cs: Don't crash if pkg-config returns an error.
+
 2005-11-18  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* prj2make-sharp-lib.addin.xml: Fixed command placement in menu.
